--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.4.1
 autopep8==1.5.7
 Babel==2.9.1
+beautifulsoup4==4.10.0
+behave==1.2.6
+behave-django==1.4.0
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
@@ -17,6 +20,8 @@ django-money==2.1
 django-phonenumber-field==5.2.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+factory-boy==3.2.0
+Faker==9.2.0
 google-api-core==2.0.1
 google-api-python-client==2.23.0
 google-auth==2.1.0
@@ -26,6 +31,8 @@ googleapis-common-protos==1.53.0
 httplib2==0.19.1
 idna==3.2
 oauthlib==3.1.1
+parse==1.19.0
+parse-type==0.5.2
 phonenumbers==8.12.31
 protobuf==3.18.0
 psycopg2==2.9.1
@@ -36,13 +43,17 @@ pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
 pyparsing==2.4.7
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
+selenium==3.141.0
 six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.2
+text-unidecode==1.3
 toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.6
