--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 factory-boy==3.2.0
 Faker==9.2.0
+filelock==3.3.0
 google-api-core==2.0.1
 google-api-python-client==2.23.0
 google-auth==2.1.0
@@ -47,13 +48,16 @@ python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.26.0
+requests-file==1.5.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 selenium==3.141.0
+selenium-requests==1.3.3
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.2
 text-unidecode==1.3
+tldextract==3.1.2
 toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.6
