--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ google-auth==2.1.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.53.0
+gspread==4.0.1
 httplib2==0.19.1
 idna==3.2
 oauthlib==3.1.1
