added pytest, and got started with first test

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 testpaths = tests/unit
-DJANGO_SETTINGS_MODULE = 'core.settings.test'
+DJANGO_SETTINGS_MODULE = core.settings.test
+python_files = tests.py tests_*.py *_tests.py test_*.py *_test.py
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::django.utils.deprecation.RemovedInDjango41Warning
