--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.4.1
+attrs==21.2.0
 autopep8==1.5.7
 Babel==2.9.1
 beautifulsoup4==4.10.0
@@ -30,12 +31,17 @@ googleapis-common-protos==1.53.0
 gspread==4.0.1
 httplib2==0.19.1
 idna==3.2
+iniconfig==1.1.1
+oauth2client==4.1.3
 oauthlib==3.1.1
+packaging==21.2
 parse==1.19.0
 parse-type==0.5.2
 phonenumbers==8.12.31
+pluggy==1.0.0
 protobuf==3.18.0
 psycopg2==2.9.1
+py==1.11.0
 py-moneyed==1.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -43,6 +49,8 @@ pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
 pyparsing==2.4.7
+pytest==6.2.5
+pytest-django==4.4.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
