got started with pytest testing

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 testpaths = tests/unit
 DJANGO_SETTINGS_MODULE = core.settings.test
-python_files = tests.py tests_*.py *_tests.py test_*.py *_test.py
+python_files = tests.py tests_*.py *_tests.py test_*.py *_test.py *test.py test*.py
 filterwarnings =
     ignore::DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango41Warning
