--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ PyJWT==2.1.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==4.4.0
+pytest-mock==3.6.1
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
