finished testing for utils, and splitted pytest into its component marks

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,6 @@ python_files = tests.py tests_*.py *_tests.py test_*.py *_test.py *test.py test*
 filterwarnings =
     ignore::DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango41Warning
+markers =
+    sms: marks tests as sms module (deselect with '-m "not sms"')
+    google: marks tests as sms.google module (deselect with '-m "not google"')
