added current marker and worked on Google DataOperations

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ filterwarnings =
 markers =
     sms: marks tests as sms module (deselect with '-m "not sms"')
     google: marks tests as sms.google module (deselect with '-m "not google"')
+    current: marks tests as the currently tested module (deselect with '-m "not current"')
