running the firs tpytest gms test

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango41Warning
 markers =
     sms: marks tests as sms module (deselect with '-m "not sms"')
+    gms: marks tests as gms module (deselect with '-m "not gms"')
     google: marks tests as sms.google module (deselect with '-m "not google"')
     current: marks tests as the currently tested module (deselect with '-m "not current"')
