--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ filterwarnings =
 markers =
     sms: marks tests as sms module (deselect with '-m "not sms"')
     gms: marks tests as gms module (deselect with '-m "not gms"')
+    cms: marks tests as cms module (deselect with '-m "not cms"')
     google: marks tests as sms.google module (deselect with '-m "not google"')
     current: marks tests as the currently tested module (deselect with '-m "not current"')
