finished auth pytest, all system unit tests with pytest are complete, last testing needs to be done is the behave intergral tests on cms component

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,8 +6,9 @@ filterwarnings =
     ignore::DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango41Warning
 markers =
-    sms: marks tests as sms module (deselect with '-m "not sms"')
-    gms: marks tests as gms module (deselect with '-m "not gms"')
+    auth: marks tests as authentication module (deselect with '-m "not auth"')
     cms: marks tests as cms module (deselect with '-m "not cms"')
+    gms: marks tests as gms module (deselect with '-m "not gms"')
+    sms: marks tests as sms module (deselect with '-m "not sms"')
     google: marks tests as sms.google module (deselect with '-m "not google"')
     current: marks tests as the currently tested module (deselect with '-m "not current"')
