renamed, but broke pytest, need to fix

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ filterwarnings =
     ignore::DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango41Warning
 markers =
+    core: marks tests as core/project level module (deselect with '-m "not core"')
     auth: marks tests as authentication module (deselect with '-m "not auth"')
     cms: marks tests as cms module (deselect with '-m "not cms"')
     gms: marks tests as gms module (deselect with '-m "not gms"')
