--- a/pytest.ini
+++ b/pytest.ini
@@ -12,4 +12,5 @@ markers =
     gms: marks tests as gms module (deselect with '-m "not gms"')
     sms: marks tests as sms module (deselect with '-m "not sms"')
     google: marks tests as sms.google module (deselect with '-m "not google"')
+    stats: marks tests as sms.stats module (deselect with '-m "not stats"')
     current: marks tests as the currently tested module (deselect with '-m "not current"')
