--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 Faker==9.2.0
 filelock==3.3.0
+gitdb==4.0.10
+GitPython==3.1.29
 google-api-core==2.0.1
 google-api-python-client==2.23.0
 google-auth==2.1.0
@@ -63,6 +65,7 @@ requests-file==1.5.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.16.0
+smmap==5.0.0
 soupsieve==2.2.1
 sqlparse==0.4.2
 text-unidecode==1.3
