added CI/CD section for the README for future docs also changed the way .env-template is, to mimick production needs

--- a/core/settings/.env-template
+++ b/core/settings/.env-template
@@ -1,10 +1,13 @@
 ENV='EITHER DEV | TEST | PROD '
 SECRET_KEY='REPLACE WITH YOUR SECRET KEY'
+SECRET_TOKEN='REPLACE WITH YOUR SECRET TOKEN USED BY GITHUB WEBHOOK'
 DATABASE_ENGINE='REPLACE WITH DJANGO DB DRIVER'
 DATABASE_NAME='REPLACE WITH YOUR DATABASE NAME'
 DATABASE_USER='REPLACE WITH YOUR DATABASE USERNAME'
 DATABASE_PASSWORD='REPLACE WITH YOUR DATABASE USER PASSWORD'
 DATABASE_HOST='REPLACE WITH YOUR DATABASE HOSTNAME'
 DATABASE_PORT='REPLACE WITH YOUR DATABASE PORT NUMBER'
+EMAIL_HOST='REPLACE WITH YOUR EMAIL HOSTNAME'
+EMAIL_PORT='REPLACE WITH YOUR EMAIL HOST PORT'
 EMAIL_HOST_USER='REPLACE WITH YOUR EMAIL USERNAME'
 EMAIL_HOST_PASSWORD='REPLACE WITH YOUR EMAIL PASSWORD'
